--- a/style.css
+++ b/style.css
@@ -7,9 +7,78 @@ html {
     min-height: 100%;
 }
 
-header {
-    margin: 0px;
+@font-face {
+    font-family: font;
+    src: url();
+}
 
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
+header {
+    margin-bottom: 40px;
+}
+
+.header {
+    width: 100%;
+    height: 60px;
+    display: block;
+    background-color: #dc3d4b;
+}
+
+.innerHeader {
+    width: 90%;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+.logoContainer {
+    height: 100%;
+    display: table;
+    float: left;
+}
+
+.logoContainer h1 {
+    color: white;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    font-family: Helvetica;
+    font-size: 24px;
+}
+
+.logoContainer h1 span {
+    font-weight: 200;
+}
+
+.nav {
+    float: right;
+    height: 100%;
+}
+
+.nav a {
+    height: 100%;
+    display: table;
+    float: left;
+    padding: 0px 20px;
+}
+
+nav a:last-child {
+    padding-right: 0;
+}
+
+.nav a li {
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+    color: white;
+    font-family: Helvetica;
+    font-weight: 600;
 }
 
 body {
@@ -33,7 +102,6 @@ body {
     text-align: center;
     color: white;
     margin: 10px;
-    margin-top: -20px;
 }
 
 .main {
