--- a/style.css
+++ b/style.css
@@ -7,11 +7,6 @@ html {
     min-height: 100%;
 }
 
-@font-face {
-    font-family: font;
-    src: url();
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -19,66 +14,37 @@ html {
     text-decoration: none;
 }
 
-header {
-    margin-bottom: 40px;
-}
 
-.header {
+#header {
+    box-sizing: border-box;
+    background: #12161f;
+    padding: 10px 15px;
+    display: table;
     width: 100%;
     height: 60px;
-    display: block;
-    background-color: #dc3d4b;
-}
+  }
 
-.innerHeader {
-    width: 90%;
-    height: 100%;
-    display: block;
-    margin: 0 auto;
+.logo img {
+    height: 50px;
+    margin-left: 100px;
 }
-
-.logoContainer {
-    height: 100%;
-    display: table;
-    float: left;
-}
-
-.logoContainer h1 {
-    color: white;
-    height: 100%;
-    display: table-cell;
+  
+.logo, .menu {
     vertical-align: middle;
-    font-family: Helvetica;
-    font-size: 24px;
-}
-
-.logoContainer h1 span {
-    font-weight: 200;
-}
-
-.nav {
-    float: right;
-    height: 100%;
-}
-
-.nav a {
-    height: 100%;
-    display: table;
-    float: left;
-    padding: 0px 20px;
-}
-
-nav a:last-child {
-    padding-right: 0;
-}
-
-.nav a li {
     display: table-cell;
-    vertical-align: middle;
-    height: 100%;
-    color: white;
-    font-family: Helvetica;
+}
+  
+.menu ul {
+    text-align: right;
+    margin-right: 100px;
+}
+  
+.menu ul li {
+    font-family: Arial;
     font-weight: 600;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0px 20px;
 }
 
 body {
@@ -89,11 +55,16 @@ body {
 .bodyDiv {
     font-family: 'Trebuchet MS';
     font-weight: lighter;
+    font-size: 9pt;
     letter-spacing: 0.5pt;
-    width: 1340px;
+
     margin-left: auto;
     margin-right: auto;
-    font-size: 8pt;
+    transform: scale(0.85);
+    transform-origin: center;
+    white-space:nowrap;
+    width: fit-content;
+    position: relative;
 }
 
 .top {
@@ -211,7 +182,7 @@ img {
     text-align: center;
     font-family: 'Trebuchet MS';
     color: white;
-	font-size: 8pt;
+	font-size: 9pt;
 	font-weight: normal;
 	max-width: 100%;
     padding: 2px 2px 2px 2px;
@@ -242,4 +213,29 @@ select {
 
 select option {
     background-color: #49567a;
+}
+
+select optgroup {
+    background-color: #374363;
+}
+
+
+.menu a {
+    color: #adadad;
+}
+
+.menu a:hover {
+    color: white;
+}
+
+.menu a:active {
+    color: white;
+}
+
+.menu a:visited {
+    text-decoration: none;
+}
+
+.menu a:current {
+    color: white;
 }
