--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ html {
 
 @font-face {
     font-family: AkiraExpanded;
-    src: url("fonts/AkiraExpanded.otf");
-    src: url("fonts/AkiraExpanded.otf") format('embedded-opentype'), url("fonts/AkiraExpanded.otf") format('woff'), url("fonts/AkiraExpanded.otf") format('truetype');
+    src: "AkiraExpanded.otf";
+    src: url("AkiraExpanded.otf") format('embedded-opentype'), url("AkiraExpanded.otf") format('woff'), url("AkiraExpanded.otf") format('truetype');
     font-style: normal;
 }
 
