--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
     left: 0;
     min-width: 100%;
     min-height: 100%;
+    
 }
 
 * {
@@ -22,6 +23,12 @@ html {
     font-style: normal;
 }
 
+header {
+    z-index: 1;
+    position: sticky;
+    top: 0;
+    
+}
 
 #header {
     box-sizing: border-box;
@@ -30,7 +37,7 @@ html {
     display: table;
     width: 100%;
     height: 60px;
-  }
+}
 
 .logo img {
     height: 50px;
@@ -231,6 +238,7 @@ select {
     cursor: pointer;
     z-index: 10;
 }
+
 
 select option {
     background-color: #49567a;
