--- a/list.css
+++ b/list.css
@@ -49,7 +49,7 @@ li ul {
 }
 
 
-ul li a:hover {
+ul li a:hover, ul li a:active {
     background: #2c3750;
 }
 li:hover > ul {
@@ -60,7 +60,7 @@ li:hover li {
     float: left;
 }
 
-li:hover li a:hover {
+li:hover li a:hover, li:active, li a:active {
     background: #2c3e50;
 }
 
@@ -85,7 +85,7 @@ li a img {
     margin: auto;
 }
 
-.col1 .noHover:hover {
+.col1 .noHover:hover, .col1 .noHover:active {
     background-color: rgba(151, 176, 240, 0.25);
     width: 171px;
 }
@@ -95,7 +95,7 @@ li a img {
     background-color: rgba(151, 176, 240, 0.25);
 }
 
-.col2 .noHover:hover {
+.col2 .noHover:hover, .col2 .noHover:active {
     background-color: rgba(151, 176, 240, 0.25);
     width: 281px;
 }
@@ -105,7 +105,7 @@ li a img {
     background-color: rgba(151, 176, 240, 0.25);
 }
 
-.col3 .noHover:hover {
+.col3 .noHover:hover, .col3 .noHover:active {
     background-color: rgba(151, 176, 240, 0.25);
     width: 316px;
 }
@@ -115,7 +115,7 @@ li a img {
     background-color: rgba(151, 176, 240, 0.25);
 }
 
-.col4 .noHover:hover {
+.col4 .noHover:hover, .col4 .noHover:active {
     background-color: rgba(151, 176, 240, 0.25);
     width: 281px;
 }
