--- a/style.css
+++ b/style.css
@@ -1,122 +1,136 @@
 html {
-    background-color: #314870;
-    background-image: url("images/CollectionBackground.png");
-    background-size: cover;
-    top: 0; 
-    left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    
+	background-color: #314870;
+	background-image: url("images/CollectionBackground.png");
+	background-size: cover;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	min-height: 100%;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
 }
 
 @font-face {
-    font-family: AkiraExpanded;
-    src: "AkiraExpanded.otf";
-    src: url("AkiraExpanded.otf") format('embedded-opentype'), url("AkiraExpanded.otf") format('woff'), url("AkiraExpanded.otf") format('truetype');
-    font-style: normal;
+	font-family: AkiraExpanded;
+	src: "AkiraExpanded.otf";
+	src: url("AkiraExpanded.otf") format('embedded-opentype'), url("AkiraExpanded.otf") format('woff'), url("AkiraExpanded.otf") format('truetype');
+	font-style: normal;
 }
 
 header {
-    z-index: 1;
-    position: sticky;
-    top: 0;
-    
+	z-index: 1;
+	position: sticky;
+	top: 0;
+	font-size: 12pt;
+	margin-bottom: 20px;
+	background-color: #12161f;
 }
 
 #header {
-    box-sizing: border-box;
-    background: #12161f;
-    padding: 10px 15px;
-    display: table;
-    width: 100%;
-    height: 60px;
+	box-sizing: border-box;
+	padding: 10px 15px;
+	display: table;
+	width: 100%;
+	height: 60px;
+}
+
+.menu {
+	width: fit-content;
 }
 
 .logo img {
-    height: 50px;
-    margin-left: 149px;
+	height: 50px;
+	margin-left: 50px;
 }
-  
-.logo, .menu, .login {
-    vertical-align: middle;
-    display: table-cell;
+
+.logo,
+.menu,
+.login {
+	vertical-align: middle;
+	display: table-cell;
 }
-  
+
 .menu ul {
-    text-align: center;
-    width: fit-content;
+	text-align: center;
 }
-  
+
 .menu ul li {
-    font-family: AkiraExpanded;
-    font-weight: 200;
-    display: inline-block;
-    vertical-align: top;
-    margin: 0px 10px;
+	font-family: AkiraExpanded;
+	font-weight: 200;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 10px;
 }
 
 .login ul {
-    text-align: right;
-    margin-right: 25px;
-    width: fit-content;
+	text-align: right;
+	margin-right: 50px;
+	width: fit-content;
 }
-  
+
 .login ul li {
-    font-family: AkiraExpanded;
-    font-weight: 200;
-    display: inline-block;
-    vertical-align: top;
-    margin: 0px 10px;
+	font-family: AkiraExpanded;
+	font-weight: 200;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 10px;
 }
 
 .menu a {
-    color: #adadad;
+	color: #adadad;
 }
 
 .menu a:hover {
-    color: white;
+	color: white;
 }
 
 .menu a:visited {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .menu .current {
-    color: #ffffff;
+	color: #ffffff;
 }
 
 .login a {
-    color: #adadad;
+	color: #adadad;
 }
 
 .login a:hover {
-    color: white;
+	color: white;
 }
 
 .login a:visited {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .login .current {
-    color: #ffffff;
+	color: #ffffff;
 }
 
-.resetButton {
-    display: inline-block;
-    vertical-align: top;
-    margin: 10px;
+footer {
+	bottom: 0;
+	font-size: 12pt;
+	margin: 0;
+	margin-top: 300px;
+	background-color: #12161f;
 }
 
-.saveButton {
-    display: inline-block;
-    vertical-align: top;
-    margin: 10px;
-    margin-left: -5px;
+.footerContainer {
+	box-sizing: border-box;
+	padding: 30px;
+	display: table;
+	width: 100%;
+	height: 60px;
+}
+
+.footerContainer p {
+	color: #d1d1d1;
+	font-family: Helvetica, sans-serif;
+	font-weight: bold;
 }
