--- a/collection.css
+++ b/collection.css
@@ -27,6 +27,7 @@ body {
 	color: white;
 	display: inline-block;
 	background-color: rgba(99, 117, 151, 0.3);
+	transition: all 0.2s ease 0s;
 }
 
 .col1 {
@@ -53,29 +54,31 @@ body {
 }
 
 .profile {
-	max-height: 80px;
+	max-height: 100px;
 	margin: 0;
 }
 
-.col1 .profile {
-	max-width: 130px;
+.col1 .profile,
+.col2 .profile,
+.col3 .profile,
+.col4 .profile {
 	padding: 15px;
-	object-fit: cover;
+}
+
+.col1 .profile {
+	max-width: 155px;
 }
 
 .col2 .profile {
-	max-width: 230px;
-	padding: 15px;
+	max-width: 255px;
 }
 
 .col3 .profile {
-	max-width: 290px;
-	padding: 15px;
+	max-width: 300px;
 }
 
 .col4 .profile {
-	max-width: 310px;
-	padding: 15px;
+	max-width: 335px;
 }
 
 .weaponText {
@@ -88,7 +91,7 @@ body {
 	margin-left: 535px;
 }
 
-button {
+.buttons button {
 	display: inline-block;
 	font-family: Helvetica, sans-serif;
 	font-weight: lighter;
@@ -103,7 +106,7 @@ button {
 	margin: 5px;
 }
 
-button:hover {
+.buttons button:hover {
 	background-color: rgba(157, 173, 207, 0.40);
 	cursor: pointer;
 }
