--- a/mobile.css
+++ b/mobile.css
@@ -1,6 +1,8 @@
 .main {
-    text-align: center;
+    
     margin: 50px;
+    margin-top: 150px;
+    text-align: center;
 }
 
 h1 {
@@ -12,4 +14,5 @@ h1 {
 p {
     font-family: Helvetica, sans-serif;
     color: white;
+    font-size: 10pt;
 }
